[package]
name = "zensight-sensor-netlink"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for Linux kernel networking state (interfaces, sockets, routes) via netlink"
license = "Apache-2.0"

[[bin]]
name = "zensight-sensor-netlink"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }

# Netlink (Linux kernel networking) — reads are unprivileged.
nlink = { git = "https://github.com/p13marc/nlink", features = ["sockdiag"] }

tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
zenoh.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
hostname = "0.4"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for Linux kernel network telemetry via
RTNETLINK/sock_diag (unprivileged reads), with an embedded sentinel. Publishes
interface, socket and control-plane telemetry to Zenoh."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-netlink", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-netlink.service", "lib/systemd/system/", "644"],
    ["../configs/netlink.json5", "etc/zensight/netlink.json5", "644"],
]
conf-files = ["/etc/zensight/netlink.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-netlink", dest = "/usr/bin/zensight-sensor-netlink", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-netlink.service", dest = "/lib/systemd/system/zensight-sensor-netlink.service", mode = "644" },
    { source = "../configs/netlink.json5", dest = "/etc/zensight/netlink.json5", mode = "644", config = true },
]
