[package]
name = "zensight-sensor-netlink"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for Linux kernel networking state (interfaces, sockets, routes) via netlink"
license = "Apache-2.0"

[[bin]]
name = "zensight-sensor-netlink"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Additive, off by default. When on, the collector also publishes a single
# structured `{ host, interfaces: [NetIface] }` object to
# `zensight/netlink/<host>/interfaces` (in addition to the unchanged per-metric
# TelemetryPoint stream). When off the crate compiles and behaves identically
# (the zenoh-free types crate is not pulled in).
aggregate-publishers = ["dep:zensight-aggregates"]

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }
# Pure, zenoh-free wire types for the aggregated interfaces object (feature-gated).
zensight-aggregates = { workspace = true, optional = true }

# Netlink (Linux kernel networking) — reads are unprivileged.
nlink = { git = "https://github.com/p13marc/nlink", features = ["sockdiag"] }

tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
zenoh.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
hostname = "0.4"
