[package]
name = "zensight-sensor-netlink"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for Linux kernel networking state (interfaces, sockets, routes) via netlink"
license = "Apache-2.0"

[[bin]]
name = "zensight-sensor-netlink"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Opt-in eBPF module (connlat + retransmit attribution + tcplife), issue #114.
# OFF by default. Requires nightly + rust-src + bpf-linker to BUILD, and
# CAP_BPF/CAP_NET_ADMIN to RUN. Keeps the unprivileged baseline intact and out
# of `cargo build --workspace` on stable CI. (The `/user` feature adds the
# aya::Pod impls on the shared records for ring-buffer/map reads.)
ebpf = [
    "dep:aya",
    "dep:aya-log",
    "dep:aya-build",
    "dep:libc",
    "zensight-sensor-netlink-ebpf-common/user",
]

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }

# Netlink (Linux kernel networking) — reads are unprivileged.
# Published crate (crates.io), not the git repo: pin to the 0.23 line.
nlink = { version = "0.23", features = ["sockdiag"] }

# Shared kernel<->user eBPF types (CONNLAT_BUCKETS, RetransKey, ConnRecord).
# Plain no_std lib — always present (no aya) so map.rs pure code/tests build on
# stable; the `user` feature (aya::Pod) is pulled only by `ebpf` above.
zensight-sensor-netlink-ebpf-common = { path = "../zensight-sensor-netlink-ebpf-common" }

# eBPF userspace (opt-in, `ebpf` feature only).
aya = { workspace = true, optional = true }
aya-log = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }

tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
zenoh.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
hostname = "0.4"

# Compiles the eBPF program crate to bytecode. Only pulled in (and only used by
# build.rs) under `--features ebpf`; stable builds never touch bpf-linker.
[build-dependencies]
aya-build = { workspace = true, optional = true }

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for Linux kernel network telemetry via
RTNETLINK/sock_diag (unprivileged reads), with an embedded sentinel. Publishes
interface, socket and control-plane telemetry to Zenoh."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-netlink", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-netlink.service", "lib/systemd/system/", "644"],
    ["../configs/netlink.json5", "etc/zensight/netlink.json5", "644"],
]
conf-files = ["/etc/zensight/netlink.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-netlink", dest = "/usr/bin/zensight-sensor-netlink", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-netlink.service", dest = "/lib/systemd/system/zensight-sensor-netlink.service", mode = "644" },
    { source = "../configs/netlink.json5", dest = "/etc/zensight/netlink.json5", mode = "644", config = true },
]
