[package]
name = "zensight-sensor-netring"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for wire-level flow/L7/anomaly telemetry via netring (AF_PACKET/AF_XDP)"
license = "Apache-2.0"

[[bin]]
name = "zensight-sensor-netring"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Sigma rule evaluation (netring 0.27). Off by default — pulls the pure-Rust
# `sigma-rust` parser via netring. Enable with `--features sigma`.
sigma = ["netring/sigma"]
# Cleartext-SNMP detection (netring 0.27, issue #72). Off by default — pulls the
# SNMP parser via netring. Enable with `--features snmp`, then set
# `collect.snmp_cleartext` to flag v1/v2c community strings as anomalies.
snmp = ["netring/snmp"]

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }

# Wire-level packet/flow telemetry. Capture needs CAP_NET_RAW; pcap replay does not.
netring = { version = "0.27", features = ["monitor", "pcap", "icmp"] }
flowscope = "0.19"

tokio = { workspace = true, features = ["full"] }
zenoh.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
hostname = "0.4"

# Community ID v1 flow hashing (#116): sorted 5-tuple + seed -> SHA1 -> base64.
# The de-facto cross-tool flow-correlation key (Zeek/Suricata/Wireshark/SecOnion).
sha1 = "0.10"
base64 = "0.22"
