[package]
name = "zensight-sensor-netring"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for wire-level flow/L7/anomaly telemetry via netring (AF_PACKET/AF_XDP)"
license = "Apache-2.0"

[[bin]]
name = "zensight-sensor-netring"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Sigma rule evaluation (netring 0.27). Off by default — pulls the pure-Rust
# `sigma-rust` parser via netring. Enable with `--features sigma`.
sigma = ["netring/sigma"]
# Cleartext-SNMP detection (netring 0.27, issue #72). Off by default — pulls the
# SNMP parser via netring. Enable with `--features snmp`, then set
# `collect.snmp_cleartext` to flag v1/v2c community strings as anomalies.
snmp = ["netring/snmp"]
# Lateral-movement detection (#123). Off by default — pulls the SMB / RDP /
# Kerberos L7 parsers via netring/flowscope. Enable with `--features lateral`,
# then set `anomalies.lateral_movement` to flag admin-share / RDP / kerberoast
# signals as anomalies (ATT&CK T1021 / T1558).
lateral = ["netring/smb", "netring/rdp", "netring/kerberos"]
# JA4H HTTP fingerprinting (#124). Off by default — pulls the JA4+ suite via
# `netring/ja4plus`, which carries the FoxIO License 1.1 (NOT OSI). The default
# build stays OSI-clean. Enable with `--features ja4plus`, then set
# `collect.http_fp` to serve JA4H fingerprints on `@/query/ja4h`.
ja4plus = ["netring/ja4plus"]

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }

# Wire-level packet/flow telemetry. Capture needs CAP_NET_RAW; pcap replay does not.
netring = { version = "0.27", features = ["monitor", "pcap", "icmp"] }
flowscope = "0.19"

tokio = { workspace = true, features = ["full"] }
zenoh.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
hostname = "0.4"

# Lock-free hot-swap of the live detector config (#121): detectors read the
# current AnomalyConfig with a cheap atomic load; the command channel stores a
# new Arc. No per-packet locking.
arc-swap = "1"

# Community ID v1 flow hashing (#116): sorted 5-tuple + seed -> SHA1 -> base64.
# The de-facto cross-tool flow-correlation key (Zeek/Suricata/Wireshark/SecOnion).
sha1 = "0.10"
base64 = "0.22"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for wire-level flow telemetry via AF_PACKET/AF_XDP
(needs CAP_NET_RAW) or pcap replay, with NDR detectors. Publishes flow and
bandwidth telemetry plus anomaly alerts to Zenoh."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-netring", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-netring.service", "lib/systemd/system/", "644"],
    ["../configs/netring.json5", "etc/zensight/netring.json5", "644"],
]
conf-files = ["/etc/zensight/netring.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-netring", dest = "/usr/bin/zensight-sensor-netring", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-netring.service", dest = "/lib/systemd/system/zensight-sensor-netring.service", mode = "644" },
    { source = "../configs/netring.json5", dest = "/etc/zensight/netring.json5", mode = "644", config = true },
]
