[package]
name = "zensight-sensor-snmp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh sensor for SNMP telemetry"

[[bin]]
name = "zensight-sensor-snmp"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zensight-sensor-core.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
json5.workspace = true

# SNMP client (async with tokio, v3 for SNMPv3/USM support)
snmp2 = { version = "0.4", features = ["tokio", "v3"] }

# SNMP PDU decoding (for trap parsing)
rasn = "0.22"
rasn-smi = "0.22"
rasn-snmp = "0.22"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for SNMP telemetry. Polls SNMP agents and receives
SNMP traps, publishing the data to Zenoh for consumption by ZenSight
or other Zenoh subscribers. Supports SNMPv1, v2c, and v3."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-snmp", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-snmp.service", "lib/systemd/system/", "644"],
    ["../configs/snmp.json5", "etc/zensight/snmp.json5", "644"],
]
conf-files = ["/etc/zensight/snmp.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-snmp", dest = "/usr/bin/zensight-sensor-snmp", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-snmp.service", dest = "/lib/systemd/system/zensight-sensor-snmp.service", mode = "644" },
    { source = "../configs/snmp.json5", dest = "/etc/zensight/snmp.json5", mode = "644", config = true },
]
