# eBPF kernel programs for the sysinfo saturation histograms (#99).
#
# A workspace member so `aya-build` can resolve it by `--package`, but the real
# programs only compile for the bpf target (aya-ebpf is target-gated below) — a
# host `cargo build --workspace` produces a trivial empty binary. The bpf object
# is built by `zensight-sensor-sysinfo/build.rs` via `aya-build` under
# `--features ebpf` (nightly + rust-src + bpf-linker). aya-build uses `--release`,
# so the workspace release profile (default opt-level 3) satisfies the verifier;
# per-package profiles are ignored for non-root members, so none are set here.
[package]
name = "zensight-sensor-sysinfo-ebpf"
version = "0.6.2"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# Plain no_std lib — builds for the host too, so the crate's host stub compiles.
zensight-sensor-sysinfo-ebpf-common = { path = "../zensight-sensor-sysinfo-ebpf-common" }

# aya-ebpf only compiles for the bpf target. Target-gating it means a host build
# of this member (e.g. `cargo build --workspace`) is a trivial empty binary and
# never pulls bpf-only crates. VERIFY-LATEST on crates.io before merging.
[target.'cfg(target_arch = "bpf")'.dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[[bin]]
name = "zensight-sensor-sysinfo-ebpf"
path = "src/main.rs"
