[package]
name = "zensight-sensor-sysinfo"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for system monitoring (CPU, memory, disk, network)"
license = "Apache-2.0"

[features]
# Opt-in eBPF saturation histograms (runqlat + biolatency), issue #99. OFF by
# default. Requires nightly + rust-src + bpf-linker to BUILD, and CAP_BPF/
# CAP_PERFMON to RUN. Keeps the unprivileged default intact and keeps the
# feature out of `cargo build --workspace` on stable CI.
ebpf = ["dep:aya", "dep:aya-log", "dep:aya-build", "dep:libc"]

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }

# Shared kernel<->user eBPF types (MAX_SLOTS, log2_bucket). Plain no_std lib —
# always present so map.rs can size histograms without a feature gate.
zensight-sensor-sysinfo-ebpf-common = { path = "../zensight-sensor-sysinfo-ebpf-common" }

# eBPF userspace (opt-in, `ebpf` feature only).
aya = { workspace = true, optional = true }
aya-log = { workspace = true, optional = true }
# EPERM/capability messaging + optional RLIMIT_MEMLOCK bump on old kernels.
libc = { version = "0.2", optional = true }

# System information
sysinfo = "0.33"

# Linux-specific metrics (CPU times, disk I/O, TCP states)
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
# statvfs() for inode saturation ceilings (FD + inode plan §C)
rustix = { version = "1", features = ["fs"] }

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "time"] }

# Zenoh
zenoh.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono = "0.4"

# Hostname detection
hostname = "0.4"

# Compiles the excluded eBPF program crate to bytecode. Only pulled in (and only
# used by build.rs) when the `ebpf` feature is enabled — stable builds never
# touch bpf-linker. See build.rs.
[build-dependencies]
aya-build = { workspace = true, optional = true }

[[bin]]
name = "zensight-sensor-sysinfo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for system monitoring. Collects CPU, memory, disk,
and network metrics from the local system and publishes them to Zenoh
for consumption by ZenSight or other Zenoh subscribers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-sysinfo", "usr/bin/", "755"],
    ["../packaging/systemd/zensight-sensor-sysinfo.service", "lib/systemd/system/", "644"],
    ["../configs/sysinfo.json5", "etc/zensight/sysinfo.json5", "644"],
]
conf-files = ["/etc/zensight/sysinfo.json5"]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-sysinfo", dest = "/usr/bin/zensight-sensor-sysinfo", mode = "755" },
    { source = "../packaging/systemd/zensight-sensor-sysinfo.service", dest = "/lib/systemd/system/zensight-sensor-sysinfo.service", mode = "644" },
    { source = "../configs/sysinfo.json5", dest = "/etc/zensight/sysinfo.json5", mode = "644", config = true },
]
