[package]
name = "zensight-sensor-sysinfo"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Zenoh sensor for system monitoring (CPU, memory, disk, network)"
license = "Apache-2.0"

[features]
# Additive, off by default. When on, the collector also publishes a single
# structured `HostInfo` object to `zensight/sysinfo/<host>/host` (in addition to
# the unchanged per-metric TelemetryPoint stream). When off the crate compiles
# and behaves identically (the zenoh-free types crate is not pulled in).
aggregate-publishers = ["dep:zensight-aggregates"]

[dependencies]
zensight-common = { path = "../zensight-common" }
zensight-sensor-core = { path = "../zensight-sensor-core" }
# Pure, zenoh-free wire types for the aggregated HostInfo (feature-gated).
zensight-aggregates = { workspace = true, optional = true }

# System information
sysinfo = "0.33"

# Linux-specific metrics (CPU times, disk I/O, TCP states)
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
# statvfs() for inode saturation ceilings (FD + inode plan §C)
rustix = { version = "1", features = ["fs"] }

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "time"] }

# Zenoh
zenoh.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
json5.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono = "0.4"

# Hostname detection
hostname = "0.4"

[[bin]]
name = "zensight-sensor-sysinfo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# =============================================================================
# Package metadata for cargo-deb
# =============================================================================
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024, Marc Pardo"
license-file = ["../LICENSE", "0"]
extended-description = """Zenoh sensor for system monitoring. Collects CPU, memory, disk,
and network metrics from the local system and publishes them to Zenoh
for consumption by ZenSight or other Zenoh subscribers."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/zensight-sensor-sysinfo", "usr/bin/", "755"],
]
depends = "$auto"

# =============================================================================
# Package metadata for cargo-generate-rpm
# =============================================================================
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zensight-sensor-sysinfo", dest = "/usr/bin/zensight-sensor-sysinfo", mode = "755" },
]
