[package]
name = "zensight"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zensight - Observability frontend for Zenoh telemetry"

[[bin]]
name = "zensight"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zenoh.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true

# GUI
iced = { version = "0.14", features = ["tokio", "canvas"] }

# Async utilities
async-stream = "0.3"
