[package]
name = "zensight"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZenSight - Observability frontend for Zenoh telemetry"

[lib]
name = "zensight"
path = "src/lib.rs"

[[bin]]
name = "zensight"
path = "src/main.rs"

[dependencies]
zensight-common.workspace = true
zenoh.workspace = true
zenoh-ext.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
json5.workspace = true

# GUI
iced = { version = "0.14", features = ["tokio", "canvas", "svg"] }
iced_anim = { version = "0.3", features = ["widgets"] }

# Async utilities
async-stream = "0.3"

# Random number generation (for demo mode)
rand = "0.9"

# Platform utilities
dirs.workspace = true

[features]
default = []
# Enable the tester developer tool (F12 to record/play tests)
tester = ["iced/tester"]

[dev-dependencies]
iced_test = "0.14"
